--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       <h1>Hello!</h1>
       <p>Hello class 32!</p>
       <p>Wonderful to have you here!</p>
+      <img
+        src="http://www.jurassicworld.com/sites/default/files/2018-06/960x540_0001_trex.png"
+        height="300"
+      />
     </div>
   </body>
 </html>
