--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <h1>Hello!</h1>
+      <h1>Welcome!</h1>
       <p>Hello class 32!</p>
       <p>Wonderful to have you here!</p>
       <img
